--- a/portfolio.html
+++ b/portfolio.html
@@ -7,19 +7,19 @@
     <title>Document</title>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css">
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/portfolio.min.css">
 </head>
 <body>
   <!-- Header -->
     <header class="header-page">
         <div class="container">
-            <a href="" class="logo-header link"><span>Web</span>Studio</a>
+            <a href="" class="header-page__logo link"><span class="header-page__logo-span">Web</span>Studio</a>
     
             <nav class="nav">
-              <ul class="nav__list list">
-                <li class="nav__item"><a href="./index.html" class="nav__link">Студия</a></li>
-                <li class="nav__item"><a href="./portfolio.html" class="current nav__link">Портфолио</a></li>
-                <li class="nav__item"><a href="" class="nav__link">Контакты</a></li>
+              <ul class="nav-list list">
+                <li class="nav-list__item"><a href="./index.html" class="nav-list__link link">Студия</a></li>
+                <li class="nav-list__item"><a href="./portfolio.html" class="nav-list__link current link">Портфолио</a></li>
+                <li class="nav-list__item"><a href="" class="nav-list__link link">Контакты</a></li>
               </ul>
             </nav>
     
@@ -53,6 +53,7 @@
                 <li class="filter__item"><button type="button" class="filter__button">Маркетинг</button></li>
               </ul>
                 <!-- Product items -->
+                <div class="portfolio">
               <ul class="portfolio__list list">
                   <li class="portfolio__item">
                     <a href="" class="portfolio__link link">
@@ -173,6 +174,7 @@
                         </a>
                     </li>
                 </ul>
+              </div>
             </div>    
         </section>
     </main>
